@@ -514,6 +514,7 @@ chicken.posix.import.scm: $(POSIXFILE).c
 chicken.c: chicken.scm mini-srfi-1.scm \
 		chicken.compiler.batch-driver.import.scm \
 		chicken.compiler.c-platform.import.scm \
+		chicken.compiler.support.import.scm \
 		chicken.data-structures.import.scm \
 		chicken.utils.import.scm
 batch-driver.c: batch-driver.scm mini-srfi-1.scm \
