@@ -96,7 +96,7 @@ $CHICKEN_PROFILE TEST.profile
 echo "======================================== scrutiny tests ..."
 $compile typematch-tests.scm -specialize -w
 ./a.out
-$compile scrutiny-tests.scm -A -scrutinize 2>scrutiny.out -verbose
+$compile scrutiny-tests.scm -A 2>scrutiny.out -verbose
 
 # this is sensitive to gensym-names, so make it optional
 if test \! -f scrutiny.expected; then
@@ -105,7 +105,7 @@ fi
 
 diff $DIFF_OPTS scrutiny.expected scrutiny.out
 
-$compile scrutiny-tests-2.scm -A -scrutinize -analyze-only 2>scrutiny-2.out -verbose
+$compile scrutiny-tests-2.scm -A 2>scrutiny-2.out -verbose
 
 # this is sensitive to gensym-names, so make it optional
 if test \! -f scrutiny-2.expected; then
@@ -283,6 +283,14 @@ $interpret -i -s r7rs-tests.scm
 echo "======================================== module tests ..."
 $interpret -include-path ${TEST_DIR}/.. -s module-tests.scm
 $interpret -include-path ${TEST_DIR}/.. -s module-tests-2.scm
+
+echo "======================================== module tests (command line options) ..."
+module="test-$(date +%s)"
+$compile test.scm -A -w -j "$module" -module "$module"
+$compile test.scm -A -w -j main -main-module
+$interpret -e "(import $module)"
+$interpret -e "(import main)"
+rm -f "$module.import.scm" main.import.scm
 
 echo "======================================== module tests (compiled) ..."
 $compile module-tests-compiled.scm
